--- a/WalletUDo/src/main/AndroidManifest.xml
+++ b/WalletUDo/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".WalletUDo"
+        android:name=".Walletudo"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/appName"
