--- a/WalletUDo/src/main/AndroidManifest.xml
+++ b/WalletUDo/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.walletudo"
     android:installLocation="auto">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--<uses-permission android:name="android.permission.INTERNET" />-->
+    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
 
     <application
         android:name=".Walletudo"
