--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,10 +109,10 @@ dependencies {
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
-
-    def googlePlayServiceVersion = '7.3.+'
+    compile 'com.android.support:design:' + androidSupportVersion
 
     // Google Drive API
+    def googlePlayServiceVersion = '7.3.+'
     compile 'com.google.android.gms:play-services-identity:' + googlePlayServiceVersion
     compile 'com.google.android.gms:play-services-drive:' + googlePlayServiceVersion
     compile 'com.google.android.gms:play-services-ads:' + googlePlayServiceVersion
