Debug and Release have different appliationId + fix readme after rename

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            applicationIdSuffix '.debug'
+        }
     }
 
     lintOptions {
