--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ repositories {
 
 dependencies {
     // Android Support
-    def androidSupportVersion = '22.+'
+    def androidSupportVersion = '22.2.0'
     compile "com.android.support:support-v4:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
@@ -115,7 +115,7 @@ dependencies {
     compile 'com.android.support:design:' + androidSupportVersion
 
     // Google Drive API
-    def googlePlayServiceVersion = '7.3.+'
+    def googlePlayServiceVersion = '7.5.0'
     compile 'com.google.android.gms:play-services-identity:' + googlePlayServiceVersion
     compile 'com.google.android.gms:play-services-drive:' + googlePlayServiceVersion
     compile 'com.google.android.gms:play-services-ads:' + googlePlayServiceVersion
@@ -170,6 +170,9 @@ dependencies {
 
     // Material dialogs
     compile 'com.afollestad:material-dialogs:0.7.3.1'
+
+    // FloatingGroupExpandableListView
+    compile 'com.diegocarloslima:fgelv:0.1.+@aar'
 
     // SQLite
     memorydbCompile 'org.xerial:sqlite-jdbc:3.8.7'
